--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>My GitHub Pages Site</title>
+    <style>
+      p{color:blue}
+    </style>
   </head>
   <body>
     <h1>Hello world!</h1>
