--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body bgcolor="green">
     <header><h1>This my first Web page!</h1></header>
-    <footer>footer example</footer>
+    <footer>Vince Creed</footer>
 </body>
 </html>
