--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Page</title>
-    <style>
-        /*insert css styling*/
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body bgcolor="green">
+<body>
     <header><h1>This my first Web page!</h1></header>
     <footer>Vince Creed</footer>
 </body>
