--- a/module 3/box-models.html
+++ b/module 3/box-models.html
@@ -7,7 +7,7 @@
     <style></style>
 
     <style class="editable">
-      .box {
+      .standard {
         border: 5px solid green;
         background-color: lightgreen;
         padding: 40px;
@@ -29,7 +29,7 @@
         <div class="box alternate">I am using the alternate box model.</div>
     </section>
     <textarea class="playable playable-css" style="height: 280px;">
-  .box {
+  .standard {
     border: 5px solid green;
     background-color: lightgreen;
     padding: 40px;
@@ -44,8 +44,8 @@
     </textarea>
 
     <textarea class="playable playable-html" style="height: 80px;">
-<div class="box">I am using the standard box model.</div>
-<div class="box alternate">I am using the alternate box model.</div>
+<div class="standard">I am using the standard box model.</div>
+<div class="standard alternate">I am using the alternate box model.</div>
     </textarea>
 
     <div class="playable-buttons">
