--- a/module 3/box-models.html
+++ b/module 3/box-models.html
@@ -8,8 +8,8 @@
 
     <style class="editable">
       .standard {
-        border: 5px solid green;
-        background-color: lightgreen;
+        border: 5px solid teal;
+        background-color: #A5CFE3;
         padding: 40px;
         margin: 40px;
         width: 350px;
@@ -24,14 +24,15 @@
 
   <body>
     <h2>Pop-up Exercise: Box Models</h2>
+    <p>Can you change the size of the second box (by adding CSS to the .alternate class) to make it match the first box in width and height?</p>
     <section class="preview">
         <div class="box">I am using the standard box model.</div>
         <div class="box alternate">I am using the alternate box model.</div>
     </section>
     <textarea class="playable playable-css" style="height: 280px;">
   .standard {
-    border: 5px solid green;
-    background-color: lightgreen;
+    border: 5px solid teal;
+    background-color: #A5CFE3;
     padding: 40px;
     margin: 40px;
     width: 350px;
