add activity links in index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://vinc3isaac18.github.io/module 3/box-models.html">Module 3</a>
+    <h1>Module 3 - Cascading Style Sheets</h1>
+    <a href="https://vinc3isaac18.github.io/module 3/box-models.html">Box models</a>
+    <a href="https://vinc3isaac18.github.io/module 3/box-sizing.html">Box Sizing</a>
+    <a href="https://vinc3isaac18.github.io/module 3/pct-size.html">CSS Sizing</a>
 </body>
 </html>
