add padding to body

--- a/module 3/box-models.html
+++ b/module 3/box-models.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Box Model Task 1: Standard and Alternate Box Models</title>
-    <link rel="stylesheet" href="mystyles.css" />
+    <link rel="stylesheet" href="./mystyles.css" />
     <style></style>
 
     <style class="editable">
