--- a/module 3/pct-size.html
+++ b/module 3/pct-size.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Box-sizing</title>
-    <link rel="stylesheet" href="mystyles.css" />
+    <link rel="stylesheet" href="./mystyles.css" />
     <style></style>
 
     <style class="editable">
