add more html and css modules

--- a/index.html
+++ b/index.html
@@ -48,30 +48,7 @@
     </header>
     <div class="page-content">
         <div id="content">
-            <div class="section px-3 px-lg-4 pt-5" id="git">
-                <div class="container-narrow">
-                  <div class="text-center mb-5"><br>
-                    <h2 class="marker marker-center">Module 1 - Git and GitHub</h2>
-                  </div>
-                  <ul>
-                        <li><a href="https://vinc3isaac18.github.io/module 3/box-models.html">Box Models</a></li>
-                        <li><a href="https://vinc3isaac18.github.io/module 3/box-sizing.html">Box Sizing</a></li>
-                        <li><a href="https://vinc3isaac18.github.io/module 3/pct-size.html">CSS Sizing</a></li>
-                  </ul> 
-                </div>
-            </div>
-            <div class="section px-3 px-lg-4 pt-5" id="htm">
-                <div class="container-narrow">
-                  <div class="text-center mb-5"><br>
-                    <h2 class="marker marker-center">Module 2 - HTML</h2>
-                  </div>
-                  <ul>
-                        <li><a href="https://vinc3isaac18.github.io/module 3/box-models.html">Box Models</a></li>
-                        <li><a href="https://vinc3isaac18.github.io/module 3/box-sizing.html">Box Sizing</a></li>
-                        <li><a href="https://vinc3isaac18.github.io/module 3/pct-size.html">CSS Sizing</a></li>
-                  </ul> 
-                </div>
-            </div>
+
             <div class="section px-3 px-lg-4 pt-5" id="css">
                 <div class="container-narrow">
                   <div class="text-center mb-5"><br>
@@ -81,6 +58,7 @@
                         <li><a href="https://vinc3isaac18.github.io/module 3/box-models.html">Box Models</a></li>
                         <li><a href="https://vinc3isaac18.github.io/module 3/box-sizing.html">Box Sizing</a></li>
                         <li><a href="https://vinc3isaac18.github.io/module 3/pct-size.html">CSS Sizing</a></li>
+                        <li><a href="https://vinc3isaac18.github.io/module 3/float-clear.html">CSS float and clear</a></li>
                   </ul> 
                 </div>
             </div>
