--- a/module 3/box-sizing.html
+++ b/module 3/box-sizing.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <h2>Pop-up Exercise: Box Models</h2>
+    <h2>Pop-up Exercise: Box Sizing</h2>
     <p>In this task, you have two boxes. The first should be sized so that the height will be at least 100 pixels tall, even if there is less content than would cause it to grow to that height, however, the content should not overflow if there is more content than fits in 100 pixels. Test this box by removing the content from the HTML to make sure you still get a 100 pixel tall box even with no content. The second box should be fixed at 100 pixels tall, so that content will overflow if there is too much.</p>
     <section class="preview">
       <div class="box box1">
@@ -32,6 +32,7 @@
         <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic. Gumbo beet greens corn soko endive gumbo gourd. </p>
         </div>
     </section>
+    <br>
     <textarea class="playable playable-css" style="height: 280px;">
         .box1 {
             border: 5px solid teal;
